--- a/src/app/layout/master/master.component.html
+++ b/src/app/layout/master/master.component.html
@@ -30,10 +30,10 @@
               <div class="sidebar-menu">
                 <h4>Menu</h4>
                 <ul>
-                  <li> <i class="material-icons"> dashboard </i> <a href="http://">Dashboar</a></li>
-                  <li> <i class="material-icons">notifications</i> <a href="http://">Notification</a></li>
-                  <li> <i class="material-icons">history</i> <a href="http://">History</a></li>
-                  <li> <i class="material-icons">assignment</i> <a href="http://">Apply</a></li>
+                  <li routerLink="/dashboard"> <i class="material-icons"> dashboard </i> <a >Dashboard</a></li>
+                  <li routerLink="/notification"> <i class="material-icons">notifications</i> <a >Notification</a></li>
+                  <li routerLink="/holiday"> <i class="material-icons">history</i> <a >History</a></li>
+                  <li routerLink="/apply"> <i class="material-icons">assignment</i> <a >Apply</a></li>
                 </ul>
               </div>
               <!-- <div class="add-btn">
@@ -58,7 +58,7 @@
                        </mat-form-field>
                      </form>
                   <span>  <i class="material-icons"> move_to_inbox  </i></span> -->
-                  <span>   <i class="material-icons"> notifications  </i>
+                  <span routerLink="/notification">   <i class="material-icons"> notifications  </i>
                   <div class="notification-circle">4</div></span>
                   <span>  <i class="material-icons"> account_circle  </i> </span>
                  </div>
