--- a/src/app/layout/master/master.component.scss
+++ b/src/app/layout/master/master.component.scss
@@ -102,6 +102,9 @@
           &:hover {
             background-color:#E7E9ED;
           }
+          &:focus {
+            outline: none;
+          }
           .notification-circle {
             width: 18px;
             height: 18px;
@@ -179,10 +182,14 @@
         padding-inline-start: 0px;
       }
       li{
+        cursor: pointer;
         font-size: 16px;
         padding: 10px 25px;
         align-items: center;
         display: flex;
+        &:focus{
+          outline: none;
+        }
         i {
           font-size: 20px;
           color: #263262;
