--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,4 @@
+<div class="main-div">
 <div class="profile">
         <div class="heading">
             <div class="dot">
@@ -5,5 +6,10 @@
             </div>
                 <h5>Samuel Smith</h5>
             </div>
+     <div class="profile-info">
+         <h6>Profile Info</h6>
+     </div>       
             
+</div>
+
 </div>
