--- a/src/app/layout/master/master.component.html
+++ b/src/app/layout/master/master.component.html
@@ -51,13 +51,7 @@
               <form class="form-inline">
                 <div class="nav">
                   <div class="icons-div">
-                   <!-- <form class="example-form">
-                       <mat-form-field class="example-full-width">
-                         <input matInput placeholder="Search"
-                                [errorStateMatcher]="matcher">
-                       </mat-form-field>
-                     </form>
-                  <span>  <i class="material-icons"> move_to_inbox  </i></span> -->
+                 <!-- <span>  <i class="material-icons"> move_to_inbox  </i></span> -->
                   <span routerLink="/notification">   <i class="material-icons"> notifications  </i>
                   <div class="notification-circle">4</div></span>
                   <span>  <i class="material-icons"> account_circle  </i> </span>
