--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,7 +77,7 @@ ng-sidebar-container {
   height: calc(100vh - 25px) !important;
 }
 .mat-header-cell {
-  font-size: 17px;
+  font-size: 14px;
 }
 // td.mat-cell:first-of-type{
 //   padding-left: 57px;
@@ -127,3 +127,26 @@ button:focus {
   height: 100vh;
 }
 
+.year-select {
+  .mat-form-field-appearance-legacy .mat-form-field-infix {
+    height: 46px!important;
+    background-color: #2C3E50!important;
+    font-size: 16px!important;
+    padding: 0px 11px!important;
+  }
+  .mat-select-value {
+    color: white;
+}
+.mat-select-arrow {
+  color: white!important;
+}
+.mat-drawer-container {
+  color: white!important;
+}
+}
+
+.holidays-main-div{
+.mat-tab-label {
+  color: #1E3262!important;
+}
+}
