--- a/src/app/layout/master/master.component.html
+++ b/src/app/layout/master/master.component.html
@@ -46,6 +46,7 @@
               <i *ngIf="arrowLeft" class="fas fa-chevron-left"></i>
               <i *ngIf="!arrowLeft" class="fas fa-chevron-right"></i>
              </button> -->
+             <div class="fixed-navbar">
              <nav class="navbar navbar-light justify-content-between">
               <a class="navbar-brand"></a>
               <form class="form-inline">
@@ -65,6 +66,7 @@
                   <i class="material-icons"> menu </i>
                  </button>
              <!-- sidebar button -->  
+            </div>
            <router-outlet></router-outlet>
 
          
