--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -21,7 +21,7 @@
                      <div class="subhead">
                             <h5>Overview</h5>
                             <div class="editbutton">
-                                    <button class="edit">Edit</button>
+                                    <button class="edit" (click)="openDialog()">Edit</button>
                                 </div> 
 
                      </div>
