--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -7,6 +7,7 @@
     margin: auto;
     position: relative;
     margin-bottom: -120px;
+    border-radius: 6px;
    
 
     h5{
@@ -32,10 +33,11 @@
 	background-color: #ffffff;
     max-width: 67%;
     margin: auto;
+    border-radius: 6px;
     
 }
 .details{
-    padding: 153px;
+    padding: 171px 171px 40px 171px;
     margin-bottom: 20px;
 }
 .icon{
@@ -44,17 +46,16 @@
     background-color: transparent;
     border-radius: 50%;
     border: 1px solid #263262;
-   
-    font-size: 18px;
+    font-size: 15px;
     text-align: center;
     padding: 5px;
     color: #263262;
-    margin-right: 18px;
+    margin-right: 15px;
 }
 .data{
     display: flex;
     align-items: baseline;
-    margin-top: 23px;
+    margin-top: 16px;
 }
 .title{
     color: #1e3262;
@@ -62,7 +63,7 @@
     font-weight: 500;
 }
 .edit{
-    padding: 4px 25px;
+    padding:7px 25px;
     background-color: #70aade;
     border: none;
     color: white;
@@ -71,4 +72,9 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    margin-bottom: 30px;
+}
+.icon1{
+    font-size: 13px;
+    padding-left: 5px;
 }
