--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,3 +150,15 @@ button:focus {
   color: #1E3262!important;
 }
 }
+.editabledata{
+
+  .mat-form-field {
+    display: block;
+  }
+  .mat-form-field-infix{
+    width: 491px;
+  }
+  .example-container{
+    margin-top: 30px;
+  }
+}
