Login,reset password and signuppages done

--- a/src/app/components/login/reset.component.html
+++ b/src/app/components/login/reset.component.html
@@ -1,29 +1,30 @@
-<div class="backgroundimage">
+<!-- <div class="backgroundimage">
         <div class="Aligner">
                 <div class="container d-100 text-center">
-                        <form id="sign">
+                        <form>
+                            <i class="material-icons image1">account_circle</i> -->
                                
-                          <img src="../../../assets/images/login10.png" alt="loginimage" height = 150px width=150px class="image1"/>
+                          <!-- <img src="../../../assets/images/login10.png" alt="loginimage" height = 150px width=150px class="image1"/> -->
                            
-                          <div class="form-group" align="center">
+                          <!-- <div class="form-group" text-align="center">
                               <mat-form-field>
                                   <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
                                   <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                                   <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                                   </button>
                                 </mat-form-field>
-                          </div>
-                          <div class="form-group" align="center">
+                          </div> -->
+                          <!-- <div class="form-group" text-align="center">
                               <mat-form-field>
-                                  <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
+                                  <input matInput placeholder="Confirm Password" [type]="hide ? 'password' : 'text'">
                                   <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                                   <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                                   </button>
                                 </mat-form-field>
-                            </div>
+                            </div> -->
                             
-                          <div class="center">
-                            <button type="button" class="btn btn-success rounded button1" name="button">Submit</button>
+                          <!-- <div class="center">
+                            <button type="button" class="btn btn-success button1" name="button">Submit</button>
                         </div>
                          
                          
@@ -34,4 +35,41 @@
                         </form>
                       </div>
                       </div>
-                    </div>
+                    </div> -->
+                    <div class="backgroundimage">
+                        <div class="Aligner">
+                                    <div class="container d-100 text-center">
+                                        
+                                            <form class="login">
+                                              <i class="material-icons image1">account_circle</i>
+                                              <!-- <img src="../../../assets/images/login10.png" alt="loginimage" height = 150px width=150px class="image1"/> -->
+                                                <div class="form-group" text-align="center">
+                                                    <i class="material-icons">
+                                                        lock
+                                                        </i>
+                                                      <mat-form-field>
+                                                        <input matInput placeholder="New Password" [type]="hide ? 'password' : 'text'">                          
+                                                      </mat-form-field>
+                                                      
+                                                </div>
+                                              <div class="form-group" text-align="center">
+                                                <!-- <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">                          
+                                                  <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                                </button> -->
+                                                <i class="material-icons">
+                                                  lock
+                                                  </i>
+                                                <mat-form-field>
+                                                  <input matInput placeholder="Confirm Password" [type]="hide ? 'password' : 'text'">                          
+                                                </mat-form-field>
+                                              </div>
+                                             
+                                             <div class="center">
+                                               <!-- <a href="#" type="button" class="btn btn-sucess reunded button1" name="button">Log In</a> -->
+                                                <button type="button" class="btn btn-success  button1" name="button">Submit</button>
+                                            </div>                      
+                                             
+                                            </form>
+                                          </div>
+                                          </div>
+                                        </div>
