--- a/src/app/components/login/signup.component.html
+++ b/src/app/components/login/signup.component.html
@@ -1,18 +1,22 @@
-<div class="backgroundimage">
+<!-- <div class="backgroundimage">
         <div class="Aligner">
             <div class="container d-100 text-center">
                     <form id="sign">
-                           
-                      <img src="../../../assets/images/login10.png" alt="loginimage" height = 150px width=150px class="image1"/>
-                        <div class="form-group" align="center">
+                        <i class="material-icons image1">account_circle</i>
+                            -->
+                      <!-- <img src="../../../assets/images/login10.png" alt="loginimage" height = 150px width=150px class="image1"/> -->
+                        
+                     
+<!--                             
+                          <div class="form-group" text-align="center">
                             <mat-form-field>
                                 <input matInput placeholder="Username">
                               </mat-form-field>
-                               <i class="material-icons ">
+                              <i class="material-icons">
                                   person
                                   </i>
                         </div>
-                      <div class="form-group" align="center">
+                      <div class="form-group" text-align="center">
                           <mat-form-field>
                               <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
                               <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
@@ -20,7 +24,7 @@
                               </button>
                             </mat-form-field>
                       </div>
-                      <div class="form-group" align="center">
+                      <div class="form-group" text-align="center">
                           <mat-form-field>
                               <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
                               <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
@@ -40,12 +44,56 @@
                        
                        
                       
-                     
-                     
-                            
-                            
+                       
                           
                     </form>
                   </div>
                   </div>
-                </div>
+                </div> -->
+                <div class="backgroundimage">
+                    <div class="Aligner">
+                                <div class="container d-100 text-center">
+                                    
+                                        <form class="login">
+                                          <i class="material-icons image1">account_circle</i>
+                                         
+                                            <div class="form-group" text-align="center">
+                                              <i class="material-icons">
+                                                person
+                                                </i>
+                                                <mat-form-field>                                                             
+                                                    <input matInput placeholder="Username">                                
+                                                  </mat-form-field>
+                                                  
+                                            </div>
+                                            <div class="form-group" text-align="center">
+                                                <i class="material-icons">
+                                                    email
+                                                    </i>
+                                                  <mat-form-field>                                                             
+                                                      <input matInput placeholder="Email">                                
+                                                    </mat-form-field>
+                                                    
+                                              </div>
+                                          <div class="form-group" text-align="center">
+                                            <!-- <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">                          
+                                              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                            </button> -->
+                                            <i class="material-icons">
+                                              lock
+                                              </i>
+                                            <mat-form-field>
+                                              <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">                          
+                                            </mat-form-field>
+                                          </div>
+                                         
+                                          
+                                         <div class="center">
+                                           <!-- <a href="#" type="button" class="btn btn-sucess reunded button1" name="button">Log In</a> -->
+                                            <button type="button" class="btn btn-success  button1" name="button">Sign Up</button>
+                                        </div>                      
+                                          
+                                        </form>
+                                      </div>
+                                      </div>
+                                    </div>
