--- a/src/styles.scss
+++ b/src/styles.scss
@@ -160,3 +160,20 @@ button:focus {
   }
   
 }
+.remember{
+  .mat-checkbox-inner-container{
+    margin-right: 19px;
+  }
+}
+.login{
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color:white !important;
+  }
+  
+.mat-form-field-appearance-legacy .mat-form-field-label {
+  color: rgb(255, 255, 255);
+}
+.mat-checkbox-frame {
+  border-color: rgb(255, 255, 255);
+}
+}
