--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,13 +25,13 @@
                               <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">                          
                             </mat-form-field>
                           </div>
-                          <div>
+                          <div class="remember">
                             <mat-checkbox>Remember me</mat-checkbox>
                             <span class="forgot-pss"><a href="#">Forgot Password?</a></span>
                           </div>
                          <div class="center">
                            <!-- <a href="#" type="button" class="btn btn-sucess reunded button1" name="button">Log In</a> -->
-                            <button type="button" class="btn btn-success rounded button1" name="button">Log In</button>
+                            <button type="button" class="btn btn-success  button1" name="button">Log In</button>
                         </div>                      
                           <div class="subheading">
                                 <!-- <p class="psw">Forgot <a routerLink="reset" routerLinkActive="active"> password?</a></p> -->
