--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -36,9 +36,9 @@ input:focus{
    background-color: #FFFFFF;
    padding: 10px 147px;
    border-radius: 25px;
-   color: #1E3262;
+   color: #0778bd;
    margin-top: 36px;
-   margin-left: 30px;
+   margin-left: 66px;
    font-weight: bold;
    font-size: 18px;
 }
@@ -109,16 +109,17 @@ i {
 font-size: 85px;  
 border-radius:50%;
 // margin-top: -72px;
-margin-left: 211px;
+margin-left: 48px;
 }
 .mat-form-field {
   width: 60%!important;
 }
 .psw {
    display: block;
-   /* float: right; */
+   
    color: white;
-   margin: 36px;
+   margin-top: 39px;
+   margin-left: 66px;
 }
 .psw a{
     color: #FFFFFF;
@@ -148,4 +149,7 @@ margin-left: 211px;
 }
 .center{
    text-align: center;
+}
+.remember{
+  display: flex;
 }
