--- a/src/app/components/login/reset.component.scss
+++ b/src/app/components/login/reset.component.scss
@@ -1,113 +1,157 @@
-
 .backgroundimage{
-  background-color: #fff;
-  background:url("../../../assets/images/backg19.jpg");
-  background-size:cover;
-   height:100vh;
-   overflow: hidden;
+  //  background-color: #fff;
+   background:url("../../../assets/images/bg-login.png");
+   background-size:cover;
+    height:100vh;
+    overflow: hidden;
+}
+.material-icons {
+  color: white
+  !important;
 }
 // input{
 //   background:none;
 //   border:none;
-//   border-bottom:2px solid #392cbd;
+//   border-bottom:2px solid #392CBD;
 //   color:#f8f8f8!important;
 //   margin-bottom: 10px;
 //   width:100%;
 //   margin-left: 26px;
 //    margin-right: 26px;
 // }
-input:focus{
- outline:none;
-}
-::placeholder {
- color:#ccc;
- text-transform:uppercase;
- letter-spacing: 1px;
-}
-.button1{
- 
- border: none;
-  background-color: #1c8adb;
-  padding: 12px 29px;
-  border-radius: 4px;
+.mat-checkbox {
+  margin-left: 100px;
   color: white;
 }
+input:focus{
+  outline:none;
+}
+::placeholder {
+  color:#ccc;
+  text-transform:uppercase;
+  letter-spacing: 1px;
+}
+.button1{
+   border: none;
+   background-color: #FFFFFF;
+   padding: 10px 147px;
+   border-radius: 25px;
+   color: #0778bd;
+   margin-top: 13px;
+   margin-left: 65px;
+   font-weight: bold;
+   font-size: 18px;
+}
+.button1:hover{
+  transition: 1s;
+  -webkit-box-shadow: 0px 1px 16px -1px rgba(255,255,255,1);
+-moz-box-shadow: 0px 1px 16px -1px rgba(255,255,255,1);
+box-shadow: 0px 1px 16px -1px rgba(255,255,255,1);
+}
+.button1:focus{
+  outline: none;
+}
 .button2{
- background-color: transparent;
- border: none;
+  background-color: transparent;
+  border: none;
 }
 .container{
- /* position:relative;
- top:200px;
- margin:auto; */
- height:450px;
- width:400px;
- background-color: #000000c2;
- border-radius:23px;
+  /* position:relative;
+  top:200px;
+  margin:auto; */
+  height:520px;
+  width:520px;
+  // background-color: #000000C2;
+  // border-radius:23px;
 }
 .fa-eye-slash:hover{
- cursor: pointer;
+  cursor: pointer;
+}
+.forgot-pss{
+  a{
+  margin-left: 80px;
+  color: white;
+  text-decoration: none;
+}
+}
+.mat-form-field-appearance-legacy .mat-form-field-underline {
+  color: white!important;
 }
 @media screen and (max-width: 600px) {
 .container{
-  /* position:relative;
- top:200px;
- padding-left:2%; 
- height:60%; */
- width:100%;
- background-color: #000000c2;
- border-radius:23px;
+   /* position:relative;
+  top:200px;
+  padding-left:2%; 
+  height:60%; */
+  width:100%;
+  background-color: #000000C2;
+  border-radius:23px;
 }
 form {
 height: auto;
 width: 100%;
 }
- }
+  }
 .form-group{
- display:flex;
- margin: 12% auto;
- text-align: center;
- width:100%;
- margin-left: 90px;
+  display:flex;
+  margin: 20px 0px 20px 0px;
+  text-align: center;
+  width:100%;
+  margin-left: 90px;
 }
 i {
- position: relative;
- top: -2px;
-  right: 48px;
- color: #fff;
+  position: relative;
+  top: 16px;
+  right: -7px;
+  margin-right: 20px;  
 }
 .image1{
-
+font-size: 85px;  
 border-radius:50%;
-margin-top: -72px;
-margin-left: 121px;
+// margin-top: -72px;
+margin-left: 48px;
+}
+.mat-form-field {
+  width: 60%!important;
 }
 .psw {
-  display: block;
-  /* float: right; */
-  color: white;
+   display: block;
+   /* float: right; */
+   color: white;
+   margin: 36px;
 }
 .psw a{
-   color:#1c8adb;
+    color: #FFFFFF;
+    font-weight: 500;
+    text-decoration: none;
+    cursor: pointer;
+    margin-left: 6px;
+}
+.psw a:hover{
+  text-decoration: underline;
 }
 .subheading{
-   text-align: center;
+    text-align: center;
 }
 .terms{
-   color: white;
-   text-align: center;
+    color: white;
+    text-align: center;
 }
-
 .Aligner {
-display: flex;
-align-items: center;
-justify-content: center;
-height: 100vh;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ height: 100vh;
 }
-
 .Aligner-item {
-max-width: 50%;
+ max-width: 50%;
 }
 .center{
-  text-align: center;
+   text-align: center;
+}
+.remember{
+  display: flex;
+}
+.login{
+  margin-top: 50px;
 }
