--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -21,15 +21,18 @@
                             <i class="fas fa-user"></i>
                         </div>
                         <p><span class="title">Name :</span> Samuel Smith</p>
-            
                     </div>
+            
+                    
             
                     <div class="data">
                         <div class="icon">
-                            <i class="far fa-envelope"></i> </div>
+                            <i class="far fa-envelope"></i>
+                         </div>
                         <p><span class="title">Email :</span> Samuel123@work.com</p>
+                 </div> 
             
-                    </div>
+                   
             
                     <div class="data">
                         <div class="icon">
@@ -37,6 +40,7 @@
                         <p><span class="title">Phone :</span> 987654321</p>
             
                     </div>
+
                     <div class="data">
                         <div class="icon">
                             <i class="fab fa-skype"></i> </div>
